# TurtleScreen

./: .gitignore  README.md  platformio.ini
STL/: TurtleScreen_monolithSkirt.stl
SquareLine/: BoxTurtle.sll  BoxTurtle.spj  BoxTurtle_CYD.sll  BoxTurtle_CYD.spj  BoxTurtle_CYD_events.py  BoxTurtle_TDisplayLong.sll  BoxTurtle_TDisplayLong.spj  BoxTurtle_TDisplayLong_events.py  BoxTurtle_events.py  SquareLine_Project.sll  SquareLine_Project.spj  Themes.slt
board/: lv_conf.h  sunton-esp32-2432S028.json
driver_tdisplaylong/: AXS15231B.cpp  AXS15231B.h  pinout_t3.h
drivers/: LGFX_SUNTON_ESP32_320_240.hpp
flasher/: flasher.py  run_flasher.bat  run_flasher.sh
src/: AXS15231B.h  api_fetch.cpp  api_fetch.h  debug.hpp  lv_conf.h  lvgl_hal.cpp  lvgl_hal.h  lvgl_usr.cpp  lvgl_usr.h  main.cpp  moonraker.cpp  moonraker.h  pinout_t3.h  ui_functions.cpp  ui_functions.h  watchdog.cpp  watchdog.h  web_page.h  wifi_manager.cpp  wifi_manager.h
src/ui/: ui.c  ui.h  (+8 more)
ui_cyd/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.cpp  ui_events.h  ui_helpers.c  ui_helpers.h  ui_themes.cpp  ui_themes.h
ui_cyd/components/: ui_comp_hook.c
ui_cyd/images/: ui_img_1470730272.c  ui_img_539412392.c  ui_img_542316787.c  ui_img_642936306.c  ui_img_642937331.c  ui_img_642940654.c  ui_img_642941679.c  ui_img_642942704.c  ui_img_642943729.c  ui_img_642945018.c  ui_img_642946043.c  ui_img_642947052.c  ui_img_642948077.c  ui_img_922480046.c  ui_img_bed_png.c  ui_img_filament_png.c  ui_img_print_bar1_png.c  ui_img_print_bar2_png.c
ui_cyd/screens/: ui_LaneFunctions.c  ui_LaneSelect.c  ui_Wait.c
(+73 files in other folders)
